// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportParser parseProducts custom fields 1`] = `
Array [
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {
        "customPage": "grid-view",
      },
      "description": "A great device for stretching paper.",
      "facets": Array [],
      "name": "Perfect Paper Stretcher",
      "optionGroups": Array [
        Object {
          "name": "size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "size",
              "values": Array [
                "Half Imperial",
                "Quarter Imperial",
                "Full Imperial",
              ],
            },
          ],
          "values": Array [
            "Half Imperial",
            "Quarter Imperial",
            "Full Imperial",
          ],
        },
      ],
      "slug": "perfect-paper-stretcher",
      "translations": Array [
        Object {
          "customFields": Object {
            "keywords": "paper, stretch",
          },
          "description": "A great device for stretching paper.",
          "languageCode": "en",
          "name": "Perfect Paper Stretcher",
          "slug": "perfect-paper-stretcher",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {
          "volumetric": "243",
        },
        "facets": Array [],
        "optionValues": Array [
          "Half Imperial",
        ],
        "price": 45.3,
        "sku": "PPS12",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Half Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {
          "volumetric": "344",
        },
        "facets": Array [],
        "optionValues": Array [
          "Quarter Imperial",
        ],
        "price": 32.5,
        "sku": "PPS14",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Quarter Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {
          "volumetric": "656",
        },
        "facets": Array [],
        "optionValues": Array [
          "Full Imperial",
        ],
        "price": 59.5,
        "sku": "PPSF",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Full Imperial",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`ImportParser parseProducts multiple products with multiple variants 1`] = `
Array [
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "A great device for stretching paper.",
      "facets": Array [],
      "name": "Perfect Paper Stretcher",
      "optionGroups": Array [
        Object {
          "name": "size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "size",
              "values": Array [
                "Half Imperial",
                "Quarter Imperial",
                "Full Imperial",
              ],
            },
          ],
          "values": Array [
            "Half Imperial",
            "Quarter Imperial",
            "Full Imperial",
          ],
        },
      ],
      "slug": "Perfect-paper-stretcher",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "A great device for stretching paper.",
          "languageCode": "en",
          "name": "Perfect Paper Stretcher",
          "slug": "Perfect-paper-stretcher",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Half Imperial",
        ],
        "price": 45.3,
        "sku": "PPS12",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Half Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Quarter Imperial",
        ],
        "price": 32.5,
        "sku": "PPS14",
        "stockOnHand": 11,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Quarter Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Full Imperial",
        ],
        "price": 59.5,
        "sku": "PPSF",
        "stockOnHand": 12,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Full Imperial",
            ],
          },
        ],
      },
    ],
  },
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "Mabef description",
      "facets": Array [],
      "name": "Mabef M/02 Studio Easel",
      "optionGroups": Array [],
      "slug": "mabef-m02-studio-easel",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "Mabef description",
          "languageCode": "en",
          "name": "Mabef M/02 Studio Easel",
          "slug": "mabef-m02-studio-easel",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [],
        "price": 910.7,
        "sku": "M02",
        "stockOnHand": 13,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [],
          },
        ],
      },
    ],
  },
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "Really mega pencils",
      "facets": Array [],
      "name": "Giotto Mega Pencils",
      "optionGroups": Array [
        Object {
          "name": "box size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "box size",
              "values": Array [
                "Box of 8",
                "Box of 12",
              ],
            },
          ],
          "values": Array [
            "Box of 8",
            "Box of 12",
          ],
        },
      ],
      "slug": "giotto-mega-pencils",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "Really mega pencils",
          "languageCode": "en",
          "name": "Giotto Mega Pencils",
          "slug": "giotto-mega-pencils",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Box of 8",
        ],
        "price": 4.16,
        "sku": "225400",
        "stockOnHand": 14,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Box of 8",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Box of 12",
        ],
        "price": 6.24,
        "sku": "225600",
        "stockOnHand": 15,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Box of 12",
            ],
          },
        ],
      },
    ],
  },
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "Keeps the paint off the clothes",
      "facets": Array [],
      "name": "Artists Smock",
      "optionGroups": Array [
        Object {
          "name": "size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "size",
              "values": Array [
                "small",
                "large",
              ],
            },
          ],
          "values": Array [
            "small",
            "large",
          ],
        },
        Object {
          "name": "colour",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "colour",
              "values": Array [
                "beige",
                "navy",
              ],
            },
          ],
          "values": Array [
            "beige",
            "navy",
          ],
        },
      ],
      "slug": "artists-smock",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "Keeps the paint off the clothes",
          "languageCode": "en",
          "name": "Artists Smock",
          "slug": "artists-smock",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "small",
          "beige",
        ],
        "price": 11.99,
        "sku": "10112",
        "stockOnHand": 16,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "small",
              "beige",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "large",
          "beige",
        ],
        "price": 11.99,
        "sku": "10113",
        "stockOnHand": 17,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "large",
              "beige",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "small",
          "navy",
        ],
        "price": 11.99,
        "sku": "10114",
        "stockOnHand": 18,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "small",
              "navy",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "large",
          "navy",
        ],
        "price": 11.99,
        "sku": "10115",
        "stockOnHand": 19,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "large",
              "navy",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`ImportParser parseProducts single product with a multiple variants 1`] = `
Array [
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "A great device for stretching paper.",
      "facets": Array [],
      "name": "Perfect Paper Stretcher",
      "optionGroups": Array [
        Object {
          "name": "size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "size",
              "values": Array [
                "Half Imperial",
                "Quarter Imperial",
                "Full Imperial",
              ],
            },
          ],
          "values": Array [
            "Half Imperial",
            "Quarter Imperial",
            "Full Imperial",
          ],
        },
      ],
      "slug": "perfect-paper-stretcher",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "A great device for stretching paper.",
          "languageCode": "en",
          "name": "Perfect Paper Stretcher",
          "slug": "perfect-paper-stretcher",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Half Imperial",
        ],
        "price": 45.3,
        "sku": "PPS12",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Half Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Quarter Imperial",
        ],
        "price": 32.5,
        "sku": "PPS14",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Quarter Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Full Imperial",
        ],
        "price": 59.5,
        "sku": "PPSF",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Full Imperial",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`ImportParser parseProducts single product with a single variant 1`] = `
Array [
  Object {
    "product": Object {
      "assetPaths": Array [
        "pps1.jpg",
        "pps2.jpg",
      ],
      "customFields": Object {},
      "description": "A great device for stretching paper.",
      "facets": Array [
        Object {
          "facet": "brand",
          "translations": Array [
            Object {
              "facet": "brand",
              "languageCode": "en",
              "value": "KB",
            },
          ],
          "value": "KB",
        },
        Object {
          "facet": "type",
          "translations": Array [
            Object {
              "facet": "type",
              "languageCode": "en",
              "value": "Accessory",
            },
          ],
          "value": "Accessory",
        },
      ],
      "name": "Perfect Paper Stretcher",
      "optionGroups": Array [],
      "slug": "perfect-paper-stretcher",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "A great device for stretching paper.",
          "languageCode": "en",
          "name": "Perfect Paper Stretcher",
          "slug": "perfect-paper-stretcher",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [
          Object {
            "facet": "material",
            "translations": Array [
              Object {
                "facet": "material",
                "languageCode": "en",
                "value": "Wood",
              },
            ],
            "value": "Wood",
          },
        ],
        "optionValues": Array [],
        "price": 45.3,
        "sku": "PPS12",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [],
          },
        ],
      },
    ],
  },
]
`;

exports[`ImportParser parseProducts works with multilingual input 1`] = `
Array [
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {
        "customPage": "grid-view",
      },
      "description": "A great device for stretching paper.",
      "facets": Array [
        Object {
          "facet": "brand",
          "translations": Array [
            Object {
              "facet": "brand",
              "languageCode": "en",
              "value": "KB",
            },
            Object {
              "facet": "品牌",
              "languageCode": "zh_Hans",
              "value": "KB",
            },
          ],
          "value": "KB",
        },
        Object {
          "facet": "type",
          "translations": Array [
            Object {
              "facet": "type",
              "languageCode": "en",
              "value": "Accessory",
            },
            Object {
              "facet": "类型",
              "languageCode": "zh_Hans",
              "value": "饰品",
            },
          ],
          "value": "Accessory",
        },
      ],
      "name": "Perfect Paper Stretcher",
      "optionGroups": Array [
        Object {
          "name": "size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "size",
              "values": Array [
                "Half Imperial",
                "Quarter Imperial",
                "Full Imperial",
              ],
            },
            Object {
              "languageCode": "zh_Hans",
              "name": "size",
              "values": Array [
                "半英制",
                "四分之一英制",
                "全英制",
              ],
            },
          ],
          "values": Array [
            "Half Imperial",
            "Quarter Imperial",
            "Full Imperial",
          ],
        },
      ],
      "slug": "perfect-paper-stretcher",
      "translations": Array [
        Object {
          "customFields": Object {
            "keywords": "paper, stretch",
          },
          "description": "A great device for stretching paper.",
          "languageCode": "en",
          "name": "Perfect Paper Stretcher",
          "slug": "perfect-paper-stretcher",
        },
        Object {
          "customFields": Object {
            "keywords": "纸张，拉伸",
          },
          "description": "一个用于拉伸纸张的伟大装置",
          "languageCode": "zh_Hans",
          "name": "完美的纸张拉伸器",
          "slug": "perfect-paper-stretcher",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {
          "volumetric": "243",
        },
        "facets": Array [],
        "optionValues": Array [
          "Half Imperial",
        ],
        "price": 45.3,
        "sku": "PPS12",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Half Imperial",
            ],
          },
          Object {
            "customFields": Object {},
            "languageCode": "zh_Hans",
            "optionValues": Array [
              "半英制",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {
          "volumetric": "344",
        },
        "facets": Array [],
        "optionValues": Array [
          "Quarter Imperial",
        ],
        "price": 32.5,
        "sku": "PPS14",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Quarter Imperial",
            ],
          },
          Object {
            "customFields": Object {},
            "languageCode": "zh_Hans",
            "optionValues": Array [
              "四分之一英制",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {
          "volumetric": "656",
        },
        "facets": Array [],
        "optionValues": Array [
          "Full Imperial",
        ],
        "price": 59.5,
        "sku": "PPSF",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Full Imperial",
            ],
          },
          Object {
            "customFields": Object {},
            "languageCode": "zh_Hans",
            "optionValues": Array [
              "全英制",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`ImportParser parseProducts works with streamed input 1`] = `
Array [
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "A great device for stretching paper.",
      "facets": Array [],
      "name": "Perfect Paper Stretcher",
      "optionGroups": Array [
        Object {
          "name": "size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "size",
              "values": Array [
                "Half Imperial",
                "Quarter Imperial",
                "Full Imperial",
              ],
            },
          ],
          "values": Array [
            "Half Imperial",
            "Quarter Imperial",
            "Full Imperial",
          ],
        },
      ],
      "slug": "Perfect-paper-stretcher",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "A great device for stretching paper.",
          "languageCode": "en",
          "name": "Perfect Paper Stretcher",
          "slug": "Perfect-paper-stretcher",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Half Imperial",
        ],
        "price": 45.3,
        "sku": "PPS12",
        "stockOnHand": 10,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Half Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Quarter Imperial",
        ],
        "price": 32.5,
        "sku": "PPS14",
        "stockOnHand": 11,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Quarter Imperial",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Full Imperial",
        ],
        "price": 59.5,
        "sku": "PPSF",
        "stockOnHand": 12,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Full Imperial",
            ],
          },
        ],
      },
    ],
  },
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "Mabef description",
      "facets": Array [],
      "name": "Mabef M/02 Studio Easel",
      "optionGroups": Array [],
      "slug": "mabef-m02-studio-easel",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "Mabef description",
          "languageCode": "en",
          "name": "Mabef M/02 Studio Easel",
          "slug": "mabef-m02-studio-easel",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [],
        "price": 910.7,
        "sku": "M02",
        "stockOnHand": 13,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [],
          },
        ],
      },
    ],
  },
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "Really mega pencils",
      "facets": Array [],
      "name": "Giotto Mega Pencils",
      "optionGroups": Array [
        Object {
          "name": "box size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "box size",
              "values": Array [
                "Box of 8",
                "Box of 12",
              ],
            },
          ],
          "values": Array [
            "Box of 8",
            "Box of 12",
          ],
        },
      ],
      "slug": "giotto-mega-pencils",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "Really mega pencils",
          "languageCode": "en",
          "name": "Giotto Mega Pencils",
          "slug": "giotto-mega-pencils",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Box of 8",
        ],
        "price": 4.16,
        "sku": "225400",
        "stockOnHand": 14,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Box of 8",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "Box of 12",
        ],
        "price": 6.24,
        "sku": "225600",
        "stockOnHand": 15,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "Box of 12",
            ],
          },
        ],
      },
    ],
  },
  Object {
    "product": Object {
      "assetPaths": Array [],
      "customFields": Object {},
      "description": "Keeps the paint off the clothes",
      "facets": Array [],
      "name": "Artists Smock",
      "optionGroups": Array [
        Object {
          "name": "size",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "size",
              "values": Array [
                "small",
                "large",
              ],
            },
          ],
          "values": Array [
            "small",
            "large",
          ],
        },
        Object {
          "name": "colour",
          "translations": Array [
            Object {
              "languageCode": "en",
              "name": "colour",
              "values": Array [
                "beige",
                "navy",
              ],
            },
          ],
          "values": Array [
            "beige",
            "navy",
          ],
        },
      ],
      "slug": "artists-smock",
      "translations": Array [
        Object {
          "customFields": Object {},
          "description": "Keeps the paint off the clothes",
          "languageCode": "en",
          "name": "Artists Smock",
          "slug": "artists-smock",
        },
      ],
    },
    "variants": Array [
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "small",
          "beige",
        ],
        "price": 11.99,
        "sku": "10112",
        "stockOnHand": 16,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "small",
              "beige",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "large",
          "beige",
        ],
        "price": 11.99,
        "sku": "10113",
        "stockOnHand": 17,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "large",
              "beige",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "small",
          "navy",
        ],
        "price": 11.99,
        "sku": "10114",
        "stockOnHand": 18,
        "taxCategory": "standard",
        "trackInventory": "FALSE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "small",
              "navy",
            ],
          },
        ],
      },
      Object {
        "assetPaths": Array [],
        "customFields": Object {},
        "facets": Array [],
        "optionValues": Array [
          "large",
          "navy",
        ],
        "price": 11.99,
        "sku": "10115",
        "stockOnHand": 19,
        "taxCategory": "standard",
        "trackInventory": "TRUE",
        "translations": Array [
          Object {
            "customFields": Object {},
            "languageCode": "en",
            "optionValues": Array [
              "large",
              "navy",
            ],
          },
        ],
      },
    ],
  },
]
`;
